// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreview /> should render a proposal preview 1`] = `
<Col
  bsClass="col"
  componentClass="li"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <Card
    className="block--shadowed proposal-preview"
    id="proposal-1"
  >
    <ProposalPreview__ProposalDefaultImage />
    <ForwardRef(Relay(Connect(ProposalPreviewBody)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
      viewer={null}
    />
    <ForwardRef(Relay(ProposalPreviewFooter))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <ForwardRef(Relay(ProposalPreviewStatus))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
    />
  </Card>
</Col>
`;

exports[`<ProposalPreview /> should render a proposal preview vip 1`] = `
<Col
  bsClass="col"
  componentClass="li"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <Card
    className="bg-vip proposal-preview block--shadowed"
    id="proposal-1"
  >
    <ProposalPreview__ProposalDefaultImage />
    <ForwardRef(Relay(Connect(ProposalPreviewBody)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "id": "1",
          "media": null,
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
      viewer={null}
    />
    <ForwardRef(Relay(ProposalPreviewFooter))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "id": "1",
          "media": null,
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <ForwardRef(Relay(ProposalPreviewStatus))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "id": "1",
          "media": null,
        }
      }
    />
  </Card>
</Col>
`;
